# open-llm-router

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
open_llm_router/: __init__.py  account_fields.py  audit.py  auth.py  bounded_maps.py  catalog.py  catalog_sync.py  circuit_breaker.py  classifier.py  cli_output.py  cli_utils.py  config.py  config_cli.py  idempotency.py  live_metrics.py  live_metrics_dispatcher.py  log_analysis_cli.py  main.py  model_utils.py  numeric_utils.py  persistence.py  policy_updater.py  profile_compiler.py  profile_config.py  proxy.py  proxy_metrics.py  reranker_benchmark_cli.py  router_cli.py  router_engine.py  scoring.py  settings.py  stats_utils.py  yaml_utils.py
open_llm_router/catalog/: models.yaml  profiles.yaml  providers.yaml
open_llm_router/catalogs/: core.py  paths.py  sync.py
open_llm_router/catalogs/data/: models.yaml
open_llm_router/cli/: config_cli.py  log_analysis_cli.py  reranker_benchmark_cli.py  router_cli.py
open_llm_router/config/: __init__.py
open_llm_router/gateway/: audit.py  auth.py  circuit_breaker.py  idempotency.py  proxy.py
open_llm_router/profile/: profile_compiler.py  profile_config.py
open_llm_router/routing/: classifier.py  router_engine.py  routing_defaults.py  scoring.py
open_llm_router/runtime/: bounded_maps.py  live_metrics.py  live_metrics_dispatcher.py  policy_updater.py  proxy_metrics.py  route_decision_tracker.py
open_llm_router/server/: main.py
open_llm_router/utils/: cli_output.py  cli_utils.py  model_utils.py  persistence.py  sequence_utils.py  token_utils.py  yaml_utils.py
smart_model_router/: audit.py  auth.py  classifier.py  config.py  config_cli.py  main.py  proxy.py  router_engine.py  scoring.py  settings.py
smart_model_router.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  client_test_utils.py  test_account_fields_refactor.py  test_audit_logger.py  test_auth.py  test_bounded_maps.py  test_catalog_sync.py  test_catalog_validation.py  test_circuit_breaker.py  test_config_cli.py  test_idempotency.py  test_learned_routing.py  test_live_metrics_dispatcher.py  test_live_metrics_policy.py  test_log_analysis_cli.py  test_model_utils.py  test_models_endpoint.py  test_persistence.py  test_profile_compiler.py  test_proxy_metrics.py  test_proxy_streaming.py  test_proxy_targets.py  test_route_decision_tracker.py  test_router_cli.py  test_router_engine.py  test_runtime_metrics_endpoints.py  test_sequence_utils.py  test_startup_log_reset.py  yaml_test_utils.py
tests/fixtures/: router.profile.yaml
